prevent images from overflowing + add margin for buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,12 @@ i.panel-icon {
 .pointer {
   cursor: pointer;
 }
+
+img {
+  max-width: 100%;
+}
+
+.btn {
+  margin-left: 3px;
+  margin-right: 3px;
+}
